; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_ucma.c_ucma_copy_ud_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_ucma.c_ucma_copy_ud_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_device = type { i32 }
%struct.rdma_ucm_ud_param = type { i32, i32, i32, i64, i32 }
%struct.rdma_ud_param = type { i32, i32, i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ib_device*, %struct.rdma_ucm_ud_param*, %struct.rdma_ud_param*)* @ucma_copy_ud_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ucma_copy_ud_event(%struct.ib_device* %0, %struct.rdma_ucm_ud_param* %1, %struct.rdma_ud_param* %2) #0 {
  %4 = alloca %struct.ib_device*, align 8
  %5 = alloca %struct.rdma_ucm_ud_param*, align 8
  %6 = alloca %struct.rdma_ud_param*, align 8
  store %struct.ib_device* %0, %struct.ib_device** %4, align 8
  store %struct.rdma_ucm_ud_param* %1, %struct.rdma_ucm_ud_param** %5, align 8
  store %struct.rdma_ud_param* %2, %struct.rdma_ud_param** %6, align 8
  %7 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %6, align 8
  %8 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %7, i32 0, i32 3
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %3
  %12 = load %struct.rdma_ucm_ud_param*, %struct.rdma_ucm_ud_param** %5, align 8
  %13 = getelementptr inbounds %struct.rdma_ucm_ud_param, %struct.rdma_ucm_ud_param* %12, i32 0, i32 4
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %6, align 8
  %16 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %15, i32 0, i32 4
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %6, align 8
  %19 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %18, i32 0, i32 3
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @memcpy(i32 %14, i32 %17, i64 %20)
  br label %22

22:                                               ; preds = %11, %3
  %23 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %6, align 8
  %24 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %23, i32 0, i32 3
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.rdma_ucm_ud_param*, %struct.rdma_ucm_ud_param** %5, align 8
  %27 = getelementptr inbounds %struct.rdma_ucm_ud_param, %struct.rdma_ucm_ud_param* %26, i32 0, i32 3
  store i64 %25, i64* %27, align 8
  %28 = load %struct.ib_device*, %struct.ib_device** %4, align 8
  %29 = load %struct.rdma_ucm_ud_param*, %struct.rdma_ucm_ud_param** %5, align 8
  %30 = getelementptr inbounds %struct.rdma_ucm_ud_param, %struct.rdma_ucm_ud_param* %29, i32 0, i32 2
  %31 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %6, align 8
  %32 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %31, i32 0, i32 2
  %33 = call i32 @ib_copy_ah_attr_to_user(%struct.ib_device* %28, i32* %30, i32* %32)
  %34 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %6, align 8
  %35 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.rdma_ucm_ud_param*, %struct.rdma_ucm_ud_param** %5, align 8
  %38 = getelementptr inbounds %struct.rdma_ucm_ud_param, %struct.rdma_ucm_ud_param* %37, i32 0, i32 1
  store i32 %36, i32* %38, align 4
  %39 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %6, align 8
  %40 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load %struct.rdma_ucm_ud_param*, %struct.rdma_ucm_ud_param** %5, align 8
  %43 = getelementptr inbounds %struct.rdma_ucm_ud_param, %struct.rdma_ucm_ud_param* %42, i32 0, i32 0
  store i32 %41, i32* %43, align 8
  ret void
}

declare dso_local i32 @memcpy(i32, i32, i64) #1

declare dso_local i32 @ib_copy_ah_attr_to_user(%struct.ib_device*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
